cmake_minimum_required(VERSION 3.10)
project(ssd2xx-demo)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

string(ASCII 27 Esc)
set(Red         "${Esc}[31m")
set(Green       "${Esc}[32m")
set(ColourReset "${Esc}[m")

set(LIBRARY_OUTPUT_PATH    ${CMAKE_BINARY_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

if(CHIP STREQUAL "ssd20x")
    message("${Green} 当前使用demo适用于：${CHIP} ${ColourReset}")
    include_directories(${CMAKE_SOURCE_DIR}/0.common/ssd20x/include)
    link_directories(${CMAKE_SOURCE_DIR}/0.common/ssd20x/ex_libs/dynamic)
    link_directories(${CMAKE_SOURCE_DIR}/0.common/ssd20x/mi_libs/dynamic)

    add_subdirectory(1.watchdog)
    add_subdirectory(2.panel/ssd20x-ttl-panel-base)
    add_subdirectory(2.panel/ssd20x-st7789-240x240-sw)
    add_subdirectory(2.panel/ssd20x-st7789-240x240-hw)

elseif(CHIP STREQUAL "ssd2x2")
    message("${Green} 当前使用demo适用于：${CHIP} ${ColourReset}")
    add_subdirectory(1.watchdog)
else()
    message("${Red} 请指定编译目标。eg：cmake -D CMAKE_TOOLCHAIN_FILE=toolchain.cmake -D CHIP=ssd20x .. ${ColourReset}" )
    message("${Red} 编译详细过程可见 README.md ${ColourReset}" )
    message(FATAL_ERROR)
endif()
